ecmascript/parser/tests/test262-error-references/fail/2f95824f19005b11.js.stderr
error: TS1056
 --> $DIR/tests/test262-parser/fail/2f95824f19005b11.js:1:15
  |
1 | var a = { set foo(...v) {} };
  |               ^^^

